--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cookie-session": "^2.1.1",
     "joi": "^18.0.2",
     "mongoose": "^9.0.2",
+    "mongoose-query-parser": "^1.3.1",
     "nestjs-pino": "^4.5.0",
     "nodemailer": "^7.0.12",
     "passport": "^0.7.0",
