--- a/apps/payments/dockerfile
+++ b/apps/payments/dockerfile
@@ -4,12 +4,17 @@ WORKDIR /usr/src/app
 
 COPY package.json ./
 COPY package-lock.json ./
+COPY tsconfig.json ./
+COPY nest-cli.json ./
 
 RUN npm install
 
-COPY . .
+COPY apps/payments ./apps/payments
+COPY libs ./libs
 
-RUN npm run build
+RUN cd apps/payments && npm install
+
+RUN npm run build payments
 
 FROM node:alpine AS production
 
@@ -19,9 +24,13 @@ ENV NODE_ENV=${NODE_ENV}
 WORKDIR /usr/src/app
 
 COPY package.json ./
-COPY package-lock.json /
+COPY package-lock.json ./
 
-RUN npm install --prod
+RUN npm install --omit=dev
+
+COPY apps/payments/package.json ./payments-packages/package.json
+
+RUN cd payments-packages && npm install --omit=dev
 
 COPY --from=development /usr/src/app/dist ./dist
 
